// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render cancel button when drawing 1`] = `
<EuiFlexGroup
  gutterSize="s"
>
  <EuiFlexItem>
    <EuiPopover
      anchorPosition="leftUp"
      button={
        <EuiPanel
          className="mapToolbarOverlay__button"
          paddingSize="none"
        >
          <EuiButtonIcon
            aria-label="Tools"
            color="text"
            iconType="wrench"
            isDisabled={false}
            onClick={[Function]}
            size="s"
            title="Tools"
          />
        </EuiPanel>
      }
      closePopover={[Function]}
      data-test-subj="mapToolsControlPopover"
      display="inline-block"
      hasArrow={true}
      id="toolsControlPopover"
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
    >
      <EuiContextMenu
        initialPanelId={0}
        panels={
          Array [
            Object {
              "id": 0,
              "items": Array [
                Object {
                  "name": "Draw shape to filter data",
                  "panel": 1,
                },
                Object {
                  "name": "Draw bounds to filter data",
                  "panel": 2,
                },
                Object {
                  "name": "Draw distance to filter data",
                  "panel": 3,
                },
              ],
              "title": "Tools",
            },
            Object {
              "content": <GeometryFilterForm
                buttonLabel="Draw shape"
                className="mapDrawControl__geometryFilterForm"
                intitialGeometryLabel="shape"
                onSubmit={[Function]}
              />,
              "id": 1,
              "title": "Draw shape",
            },
            Object {
              "content": <GeometryFilterForm
                buttonLabel="Draw bounds"
                className="mapDrawControl__geometryFilterForm"
                intitialGeometryLabel="bounds"
                onSubmit={[Function]}
              />,
              "id": 2,
              "title": "Draw bounds",
            },
            Object {
              "content": <DistanceFilterForm
                buttonLabel="Draw distance"
                className="mapDrawControl__geometryFilterForm"
                onSubmit={[Function]}
              />,
              "id": 3,
              "title": "Draw distance",
            },
          ]
        }
        size="m"
      />
    </EuiPopover>
  </EuiFlexItem>
  <EuiFlexItem>
    <EuiButton
      color="primary"
      fill={true}
      onClick={[Function]}
      size="s"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="xpack.maps.tooltip.toolsControl.cancelDrawButtonLabel"
        values={Object {}}
      />
    </EuiButton>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`renders 1`] = `
<EuiPopover
  anchorPosition="leftUp"
  button={
    <EuiPanel
      className="mapToolbarOverlay__button"
      paddingSize="none"
    >
      <EuiButtonIcon
        aria-label="Tools"
        color="text"
        iconType="wrench"
        isDisabled={false}
        onClick={[Function]}
        size="s"
        title="Tools"
      />
    </EuiPanel>
  }
  closePopover={[Function]}
  data-test-subj="mapToolsControlPopover"
  display="inline-block"
  hasArrow={true}
  id="toolsControlPopover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiContextMenu
    initialPanelId={0}
    panels={
      Array [
        Object {
          "id": 0,
          "items": Array [
            Object {
              "name": "Draw shape to filter data",
              "panel": 1,
            },
            Object {
              "name": "Draw bounds to filter data",
              "panel": 2,
            },
            Object {
              "name": "Draw distance to filter data",
              "panel": 3,
            },
          ],
          "title": "Tools",
        },
        Object {
          "content": <GeometryFilterForm
            buttonLabel="Draw shape"
            className="mapDrawControl__geometryFilterForm"
            intitialGeometryLabel="shape"
            onSubmit={[Function]}
          />,
          "id": 1,
          "title": "Draw shape",
        },
        Object {
          "content": <GeometryFilterForm
            buttonLabel="Draw bounds"
            className="mapDrawControl__geometryFilterForm"
            intitialGeometryLabel="bounds"
            onSubmit={[Function]}
          />,
          "id": 2,
          "title": "Draw bounds",
        },
        Object {
          "content": <DistanceFilterForm
            buttonLabel="Draw distance"
            className="mapDrawControl__geometryFilterForm"
            onSubmit={[Function]}
          />,
          "id": 3,
          "title": "Draw distance",
        },
      ]
    }
    size="m"
  />
</EuiPopover>
`;
